[gd_scene load_steps=16 format=3 uid="uid://dum2vhk725ubd"]

[ext_resource type="Script" path="res://scenes/ui_entities/ui/ui.gd" id="1_3cdks"]
[ext_resource type="PackedScene" uid="uid://btco02dq00kwc" path="res://scenes/ui_entities/alter/alter.tscn" id="1_yf748"]
[ext_resource type="Texture2D" uid="uid://dg1q3pxuipxkg" path="res://scenes/ui_entities/inventory/textures/ui.png" id="2_1tb5p"]
[ext_resource type="PackedScene" uid="uid://bgol823ub27ic" path="res://scenes/ui_entities/inventory/inventory.tscn" id="3_bwefo"]
[ext_resource type="PackedScene" path="res://scenes/ui_entities/button/btn_spikes.tscn" id="5_cuxea"]
[ext_resource type="PackedScene" uid="uid://drtsb3cnf4owo" path="res://scenes/ui_entities/button/btn_forfiet.tscn" id="5_j8rod"]
[ext_resource type="PackedScene" uid="uid://ybxcox1kagym" path="res://scenes/ui_entities/end/end.tscn" id="6_7mpor"]
[ext_resource type="PackedScene" uid="uid://fr2enfc8n1ci" path="res://scenes/ui_entities/forfeiting/forfeiting.tscn" id="6_gvynx"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_l7cmk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0jkh"]
size = Vector2(64.75, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0d83l"]
size = Vector2(66.5, 15)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_lqpwv"]
a = Vector2(102, 0)
b = Vector2(102, 180)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_eaat3"]
a = Vector2(0, 96)
b = Vector2(102, 96)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_wnwn8"]
a = Vector2(0, 112)
b = Vector2(102, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lw1g"]
size = Vector2(99, 13)

[node name="Ui" type="Node2D" node_paths=PackedStringArray("inventory", "alter", "end", "health_label", "wave_label")]
script = ExtResource("1_3cdks")
inventory = NodePath("Inventory")
alter = NodePath("Alter")
end = NodePath("End")
health_label = NodePath("Node/Control/Health")
wave_label = NodePath("Node/Control/Next Wave")

[node name="Alter" parent="." node_paths=PackedStringArray("alter_buttons", "summon_area", "summoning_sprite") instance=ExtResource("1_yf748")]
position = Vector2(0, 112)
alter_buttons = [NodePath("Alter Button1"), NodePath("Alter Button2"), NodePath("Alter Button3"), NodePath("Alter Button4"), NodePath("Alter Button5")]
summon_area = NodePath("SummonArea2D")
summoning_sprite = NodePath("Alter Bleed")

[node name="Ui" type="Sprite2D" parent="."]
position = Vector2(160, 90)
texture = ExtResource("2_1tb5p")

[node name="Borders" type="Node2D" parent="."]
visible = false

[node name="Game Border" type="RigidBody2D" parent="Borders"]
collision_layer = 2
collision_mask = 2
freeze = true

[node name="Bottom" type="CollisionShape2D" parent="Borders/Game Border"]
position = Vector2(317, 174)
shape = SubResource("WorldBoundaryShape2D_l7cmk")

[node name="Right" type="CollisionShape2D" parent="Borders/Game Border"]
position = Vector2(317, 177)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_l7cmk")

[node name="Top" type="CollisionShape2D" parent="Borders/Game Border"]
position = Vector2(3, 3)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_l7cmk")

[node name="Left" type="CollisionShape2D" parent="Borders/Game Border"]
position = Vector2(3, 3)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_l7cmk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Game Border"]
position = Vector2(131.625, 172)
shape = SubResource("RectangleShape2D_f0jkh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Borders/Game Border"]
position = Vector2(284.25, 171.5)
shape = SubResource("RectangleShape2D_0d83l")

[node name="Inventory Right" type="Area2D" parent="Borders"]
input_pickable = false
gravity_space_override = 1
gravity_point_center = Vector2(-1, 0)
gravity_direction = Vector2(-1, 0)
gravity = 9800.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Inventory Right"]
shape = SubResource("SegmentShape2D_lqpwv")

[node name="Inventory Bottom" type="Area2D" parent="Borders"]
input_pickable = false
gravity_space_override = 1
gravity = -100.0
linear_damp_space_override = 3
linear_damp = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Inventory Bottom"]
shape = SubResource("SegmentShape2D_eaat3")

[node name="Buttons Bottom" type="Area2D" parent="Borders"]
position = Vector2(0, -3)
input_pickable = false
gravity_space_override = 1
gravity = -1000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Buttons Bottom"]
shape = SubResource("SegmentShape2D_wnwn8")

[node name="Buttons Damper" type="Area2D" parent="Borders"]
input_pickable = false
gravity = -1960.0
linear_damp_space_override = 1
linear_damp = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Buttons Damper"]
position = Vector2(51.5, 104.5)
shape = SubResource("RectangleShape2D_4lw1g")

[node name="Buttons" type="Node2D" parent="."]

[node name="Forfiet" parent="Buttons" node_paths=PackedStringArray("area") instance=ExtResource("5_j8rod")]
position = Vector2(51, 104)
area = NodePath("Area2D")

[node name="BtnRaiseSpikes" parent="Buttons" node_paths=PackedStringArray("area") instance=ExtResource("5_cuxea")]
position = Vector2(208, 172)
area = NodePath("Area2D")

[node name="Inventory" parent="." node_paths=PackedStringArray("storage_space", "debug_sprite") instance=ExtResource("3_bwefo")]
position = Vector2(3, 3)
storage_space = NodePath("Storage Space/CollisionShape2D")
debug_sprite = NodePath("Sprite2D")
area = Rect2(3, 3, 96, 91)

[node name="Forfeiting" parent="." node_paths=PackedStringArray("fade_animation_player", "warning_label") instance=ExtResource("6_gvynx")]
fade_animation_player = NodePath("FadeAnimationPlayer")
warning_label = NodePath("Control/Control/CountdownLabel")

[node name="End" parent="." node_paths=PackedStringArray("screen", "stats", "audio") instance=ExtResource("6_7mpor")]
screen = NodePath("Control")
stats = NodePath("Control/Stats go here")
audio = NodePath("AudioStreamPlayer")

[node name="Node" type="Node" parent="."]

[node name="Control" type="Control" parent="Node"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Next Wave" type="Label" parent="Node/Control"]
layout_mode = 0
offset_left = 258.0
offset_top = 170.0
offset_right = 327.0
offset_bottom = 178.0
theme_override_font_sizes/font_size = 7
text = "Next Boss: 66s"

[node name="Health" type="Label" parent="Node/Control"]
auto_translate_mode = 1
layout_mode = 0
offset_left = 107.0
offset_top = 170.0
offset_right = 157.0
offset_bottom = 178.0
theme_override_font_sizes/font_size = 7
text = "Health: 100%"

[connection signal="summon" from="Alter" to="." method="_on_alter_summon"]
[connection signal="button_down" from="Buttons/Forfiet" to="Forfeiting" method="start"]
[connection signal="button_up" from="Buttons/Forfiet" to="Forfeiting" method="stop"]
[connection signal="button_down" from="Buttons/BtnRaiseSpikes" to="." method="_on_btn_raise_spikes_button_down"]
[connection signal="button_up" from="Buttons/BtnRaiseSpikes" to="." method="_on_btn_raise_spikes_button_up"]
[connection signal="forfeited" from="Forfeiting" to="." method="_on_forfeiting_forfeited"]
[connection signal="retry" from="End" to="." method="_on_end_retry"]
